<resources>
    <string name="app_name">ZeroTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="splash_screen_zero_time">Zero Time</string>
    <string name="signup_user_name_hint">الاسم بالكامل</string>
    <string name="signup_user_password_hint">كلمة السر</string>
    <string name="signup_primary_phone_hint">رقم الهاتف الاول</string>
    <string name="signup_secondary_phone_hint">رقم الهاتف الثانى</string>
    <string name="signup_address_hint">العنوان بالتفصيل</string>
    <string name="signup_create_account">انشاء حساب</string>
    <string name="signup_or_login_text">او تسجيل الدخول ؟</string>
    <string name="login_login_text">قم بتسجيل الدخول</string>
    <string name="login_phone_hint">رقم الهاتف</string>
    <string name="login_password_hint">كلمة السر</string>
    <string name="login_sign_in_text">تسجيل الدخول</string>
    <string name="login_or_create_new_account_text">او انشاء حساب جديد ؟</string>
    <string name="home_frag_add_order_btn_text">اضافة طلب</string>
    <string name="home_frag_month_offers_btn_text">عروض الشهر</string>
    <string name="add_order_order_description_hint">وصف الطلب ..</string>
    <string name="small">صغير</string>
    <string name="medium">متوسط</string>
    <string name="big">كبير</string>
    <string name="add_order_order_price_hint">المبلغ بالجنيه المصرى</string>
    <string name="add_order_order_notes_hint">ملاحظة عن ميعاد التسليم ( اختيارى )</string>
    <string name="add_order_receiver_name_hint">اسم المستلم</string>
    <string name="add_order_receiver_primary_phone_hint">رقم الهاتف الاول للمستلم</string>
    <string name="add_order_receiver_secondary_phone_hint">رقم الهاتف الثانى للمستلم</string>
    <string name="add_order_receiver_address_hint">عنوان المستلم بالتفصيل</string>
    <string name="add_order_order_button_hint">اطلب</string>
    <string name="profile_update_data_text">تعديل بياناتك</string>
    <string name="profile_previous_orders_text">الطلبات السابقة</string>
    <string name="profile_follow_orders_text">متابعة الطلبات</string>
    <string name="enterPhoneNumber">ادخل رقم هاتفك</string>
    <string name="forgot_password_text">هل نسيت كلمة السر ؟</string>
    <string name="next">التالى</string>
    <string name="type_new_password">لقد تم تأكيد هويتك \n من فضلك ادخل كلمه المرور الجديده</string>
    <string name="clerk_name_hint">اسم المندوب</string>
    <string name="add_clerk_hint">إضافه مندوب</string>
    <string name="clerk_age_hint">سن المندوب</string>
    <string name="has_vehicle_hint">يمتلك طياره</string>
    <string name="dont_have_vehicle_txt">لا يمتلك طياره</string>
    <string name="add_hint">إضافه</string>
    <string name="first_offer_txt">العرض الاول :</string>
    <string name="first_offer_hint">اكتب العرض الاول هنا ...</string>
    <string name="second_offer_txt">العرض الثانى :</string>
    <string name="second_offer_hint">اكتب العرض الثانى هنا ...</string>
    <string name="third_offer_txt">العرض الثالث :</string>
    <string name="third_offer_hint">اكتب العرض الثالث هنا ...</string>
    <string name="fourth_offer_txt">العرض الرابع :</string>
    <string name="fourth_offer_hint">اكتب العرض الرابع هنا ...</string>
    <string name="fifth_offer_txt">العرض الخامس :</string>
    <string name="fifth_offer_hint">اكتب العرض الخامس هنا ...</string>
    <string name="sixth_offer_txt">العرض السادس :</string>
    <string name="sixth_offer_hint">اكتب العرض السادس هنا ...</string>
    <string name="update_hint">تحديث</string>
    <string name="no_segel_found_txt">لا يوجد سجل</string>
    <string name="no_complaints_fonud_txt">لا توجد شكاوى</string>
    <string name="delete_all_complaints_hint">مسح جميع الشكاوي</string>
    <string name="new_orders_hint">طلبات جديده</string>
    <string name="display_clerks_hint">عرض المناديب</string>
    <string name="add_offers_hint">إضافه عروض</string>
    <string name="display_complaints_hint">عرض الشكاوي</string>
    <string name="users_orders_count_hint">عدد طلبات العملاء</string>
    <string name="no_clerks_found_txt">لا يوجد مندوبين</string>
    <string name="no_conversations_found_txt">لا توجد محادثات</string>
    <string name="select_clerk_txt">إختر الطيار</string>
    <string name="select_order_state_txt">إختر حاله الطلب</string>
    <string name="no_orders_found_txt">لا يوجد طلبات</string>
    <string name="orders_hint">الطلبات</string>
    <string name="conversations_hint">المحادثات</string>
    <string name="type_message_here_hint">اكتب رسالتك هنا ..</string>
    <string name="name_txt">الاسم</string>
    <string name="address_txt">العنوان</string>
    <string name="welcome_in_zero_time_txt">مرحباً بك في زيرو تايم</string>
    <string name="slide_screen_text">معنا ستشحن من اي مكان في مصر و إلي اي مكان في مصر \n وفي اسرع وقت ونتحدي</string>
    <string name="zero_time_txt">Zero Time</string>
    <string name="about_us_txt">من نحن</string>
    <string name="our_location_txt">جسر السويس - النزهه - شارع المدينه المنوره</string>
    <string name="type_your_complaint_txt">قم بإدخال شكوتك</string>
    <string name="type_complaint_here_hint">اكتب شكوتك هنا ..</string>
    <string name="send_hint">ارسال</string>
    <string name="chat_hint">الدردشة</string>
    <string name="call_hint">اتصال</string>
    <string name="email_hint">ايميل</string>
    <string name="add_order_txt">اضافة طلب</string>
    <string name="monthly_offers_txt">عروض الشهر</string>
    <string name="our_products_txt">منتجاتنا</string>
    <string name="update_data_txt">تعديل بياناتك</string>
    <string name="follow_orders_txt">متابعة الطلبات</string>
    <string name="history_txt">الطلبات السابقة</string>
    <string name="complaints_txt">شكاوى</string>
    <string name="rate_app_txt">تقييم التطبيق</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="logout_txt">تسجيل الخروج</string>
    <string name="sign_up_confirm_password_hint">تأكيد كلمة السر</string>
    <string name="do3aa_el_nesyaan">عند النسيان \n اللهم يا جامع الناس ليوم لا ريب فيه إجمعني بضالتي</string>
    <string name="new_password_hint">كلمه السر الجديده</string>
    <string name="new_password_confirm_hint">تأكيد كلمه السر الجديده</string>
    <string name="no_offers_found">لا يوجد عروض</string>
</resources>