<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf2fe"
    android:layoutDirection="ltr"
    tools:context=".Moderator.ModeratorAddClerk">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8sdp">

                <TextView
                    android:id="@+id/textAddClerk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_22sdp"
                    android:fontFamily="@font/changa_medium"
                    android:gravity="center"
                    android:text="@string/add_clerk_hint"
                    android:textColor="@color/DarkBlue"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Moderator_AddClerk_Name_edt"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@drawable/add_order_edit_text_back"
                    android:fontFamily="@font/tajwal"
                    android:hint="@string/clerk_name_hint"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:textColor="#005b96"
                    android:textColorHint="#005b96"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textAddClerk" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Moderator_AddClerk_phone1_edt"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/add_order_edit_text_back"
                    android:fontFamily="@font/tajwal"
                    android:hint="@string/signup_primary_phone_hint"
                    android:inputType="number"
                    android:letterSpacing="0.15"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:textAlignment="viewEnd"
                    android:textColor="#005b96"
                    android:textColorHint="#005b96"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Moderator_AddClerk_Name_edt" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Moderator_AddClerk_phone2_edt"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/add_order_edit_text_back"
                    android:fontFamily="@font/tajwal"
                    android:hint="@string/signup_secondary_phone_hint"
                    android:inputType="number"
                    android:letterSpacing="0.15"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:textAlignment="viewEnd"
                    android:textColor="#005b96"
                    android:textColorHint="#005b96"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Moderator_AddClerk_phone1_edt" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Moderator_AddClerk_address_edt"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/add_order_edit_text_back"
                    android:fontFamily="@font/tajwal"
                    android:hint="@string/signup_address_hint"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:textAlignment="viewEnd"
                    android:textColor="#005b96"
                    android:textColorHint="#005b96"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Moderator_AddClerk_phone2_edt" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Moderator_AddClerk_age_edt"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/add_order_edit_text_back"
                    android:fontFamily="@font/tajwal"
                    android:hint="@string/clerk_age_hint"
                    android:inputType="number"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:textAlignment="viewEnd"
                    android:textColor="#005b96"
                    android:textColorHint="#005b96"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Moderator_AddClerk_address_edt" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/tajwal"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/Moderator_AddClerk_age_edt">

                    <RadioButton
                        android:id="@+id/radio_have"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:buttonTint="#005b96"
                        android:fontFamily="@font/tajwal"
                        android:text="@string/has_vehicle_hint"
                        android:textColor="#005b96"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radio_donthave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#005b96"
                        android:fontFamily="@font/tajwal"
                        android:text="@string/dont_have_vehicle_txt"
                        android:textColor="#005b96"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/Moderator_AddClerk_add_btn"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@drawable/btn_back"
                    android:fontFamily="@font/changa_medium"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/add_hint"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/addClerk_progressBarHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="#000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>